--- a/css/custom.css
+++ b/css/custom.css
@@ -396,6 +396,44 @@ main {
     transition-delay: 150ms;
 }
 
+.card-link2 {
+    position: absolute;
+    top: 50;
+    left: 0;
+    height: 82%;
+    width: 100%;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 3rem;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 300ms ease-in-out;
+    transition-delay: 150ms;
+}
+
+.card-link2:hover {
+    opacity: 1;
+}
+
+.card-link2 span {
+    display: block;
+    background-color: rgba(255, 255, 255, .5);
+    padding-bottom: .25rem;
+    width: calc(100% - 8px);
+    text-align: center;
+    transform: translateY(-150%) scale(.1);
+    transition: all 500ms ease-in-out;
+    transition-delay: 150ms;
+}
+
+.card-link2:hover span {
+    background-color: rgba(255, 255, 255, .85);
+    transform: translateY(-0%) scale(.9);
+}
+
 .card:hover {
     box-shadow: inset 0 0 0 1px transparent;
 }
